--- a/generate.yaml
+++ b/generate.yaml
@@ -3,11 +3,13 @@ name: CloudDictionariesAPI-fault
 description: <p><b>Hi Team - This is the Cloud Web Portal service API documentation</b></p>
 basePath: /clouddictionariesapi
 openApiSpec: CloudDictionariesAPI-fault.yaml
-environmentSpec: Dev
+environmentSpec: QA
 type: API
 authMethod: none
-responseCache:
-  timeDuration: 23
-  cachepolicy: api
+azureRateLimit:
+  noOfCalls: 123
+  renewalPeriod: 56
+  ratepolicy: api
+  counter: ip-address
 schemes: []
 routes: []
